--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "express": "^4.18.2",
-    "googleapis": "^105.0.0"
+    "googleapis": "^105.0.0",
+    "dotenv": "^16.4.0"
   }
 }
